# QuantX

./: .env.example  .gitignore  API_FIX.md  API_QUICKSTART.md  ARCHITECTURE_VISUAL.md  CODEBASE_ANALYSIS.md  DASHBOARD_SETUP.md  IMPLEMENTATION_STATUS.md  INSTALL_API.md  LEARNING_PATH.md  NEXTJS_SETUP.md  QUICKSTART.md  QUICK_TEST_GUIDE.md  README.md  SETUP_AND_RUN_GUIDE.md  SETUP_COMPLETE.md  pyproject.toml  pytest.ini  quickstart.sh  requirements.txt  run_tests.sh  setup_dashboard.sh  start_api.sh  test_setup.py
.github/workflows/: lint.yml  test.yml
configs/: ml_config.yaml
dashboard/: package.json  tailwind.config.ts
dashboard/app/: layout.tsx  page.tsx
docs/: ARCHITECTURE.md  ARCHITECTURE_ASSESSMENT.md  DEPLOYMENT.md  GETTING_STARTED.md  LIVE_TRADING.md  PHASE2_FLEXIBLE_ARCHITECTURE.md  PHASE2_PROGRESS.md  PHASE3.1_COMPLETE.md  PHASE3.2_COMPLETE.md  PHASE3.3_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_PROGRESS.md  PHASE4_PROGRESS.md  PHASE4_SESSION_SUMMARY.md  PRD.md  PRODUCTION_DEPLOYMENT.md  README.md  ROADMAP.md  ROADMAP_VERIFICATION.md  TESTING_GUIDE.md  TEST_FAILURES_EXPLAINED.md  ZERODHA_SETUP.md  temp.md
docs/Phase-1/: README.md  implementation_plan.md  project_analysis.md  task.md  walkthrough.md
docs/api/: README.md
examples/: complete_backtest.py  fetch_data.py  strategy_registry.py
examples/live/: complete_live_trading.py  live_execution_demo.py  oms_risk_example.py  paper_trading_example.py  zerodha_authentication.py  zerodha_trading.py  zerodha_websocket_streaming.py
examples/ml/: ai_strategy_example.py  complete_pipeline.py  configuration_flexibility.py  feature_engineering_demo.py  mlflow_integration.py  train_deep_learning.py  train_traditional_models.py
src/quantx/: __init__.py
src/quantx/api/: __init__.py  main.py
src/quantx/api/routers/: __init__.py  engine.py  orders.py  pnl.py  positions.py
src/quantx/backtesting/: __init__.py  engine.py  metrics.py  portfolio.py
src/quantx/core/: __init__.py  config.py  events.py
src/quantx/data/: __init__.py  base.py  instruments.py  streaming.py
src/quantx/data/providers/: __init__.py  yahoo.py
src/quantx/execution/: __init__.py  live_engine.py  live_pnl.py  position_sync.py
src/quantx/execution/brokers/: __init__.py  base.py  paper_broker.py  zerodha_broker.py
src/quantx/execution/orders/: __init__.py  order_manager.py
src/quantx/execution/risk/: __init__.py  risk_manager.py
src/quantx/ml/: __init__.py  config.py
src/quantx/ml/evaluation/: __init__.py  metrics.py  validation.py
src/quantx/ml/features/: __init__.py  base.py  statistical.py  technical.py
src/quantx/ml/models/: __init__.py  base.py  deep_learning.py  traditional.py
src/quantx/ml/pipeline/: __init__.py  trainer.py
src/quantx/monitoring/: __init__.py  health.py
src/quantx/persistence/: __init__.py  state_store.py
src/quantx/strategies/: __init__.py  base.py  registry.py
tests/: conftest.py
tests/fixtures/: __init__.py  mock_broker.py
tests/unit/execution/: __init__.py  test_live_engine.py  test_live_pnl.py  test_position_sync.py
(+7 files in other folders)
