[tool.poetry]
name = "quantx"
version = "0.1.0"
description = "AI-Powered & Rule-Based Trading System"
authors = ["QuantX Team <team@quantx.io>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/quantx"
repository = "https://github.com/yourusername/quantx"
keywords = ["trading", "algorithmic-trading", "backtesting", "machine-learning", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.poetry.dependencies]
python = "^3.11"
# Data Processing
pandas = "^2.1.0"
numpy = "^1.24.0"
polars = "^0.19.0"

# Machine Learning
scikit-learn = "^1.3.0"
torch = "^2.1.0"
xgboost = "^2.0.0"
lightgbm = "^4.1.0"

# Technical Analysis
# ta-lib = "^0.4.28"  # Optional - requires C library installation
# pandas-ta = ">=0.3.14"  #  Already installed manually

# Data Providers
yfinance = "^0.2.28"
ccxt = "^4.1.0"
alpha-vantage = "^2.3.1"

# Database
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.0"

# Cache
redis = "^5.0.0"
hiredis = "^2.2.3"

# API
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
websockets = "^12.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"

# Utilities
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
click = "^8.1.7"
rich = "^13.6.0"
loguru = "^0.7.2"

# Monitoring
prometheus-client = "^0.18.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.88.0"

# Code Quality
black = "^23.10.0"
ruff = "^0.1.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"

# Documentation
mkdocs = "^1.5.0"
mkdocs-material = "^9.4.0"

# Jupyter
jupyter = "^1.0.0"
ipykernel = "^6.26.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"

[tool.poetry.scripts]
quantx = "quantx.cli.main:cli"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=quantx",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
